Changes with Apache 1.3.20

  *) Solved a very serious threading problem with WinNT/2K Services.  The
     moment master_main told that the shutdown was complete, the parent
     control thread exited Apache, leaving mod_jserv's Java process running
     and alternately invoking mod_perl's cleanups from the correct thread
     or the service control thread. [William Rowe]

  *) Populate the Win32 HKLM\System\CurrentControlSet\Services\[apachesvc]
     key with the Description value of the running server across all Win32
     platforms, including NT, ME and 9x.  This value is the server_version
     string including loaded modules.  [William Rowe]

  *) Fix ndbm.h include problems with various Linux distributions and 
     brain-dead glibc >= 2.1, which sometimes have ndbm.h in a
     non-standard db1/ subdir. PR#6929
     [Victor J. Orlikowski]

  *) Empty headers are allowed by RFC2068 section 4.2.  The presence or
     absence of an empty header can be significant.  The current mod_proxy
     of httpd 1.3.x removes empty headers. Change mod_proxy to preserve
     empty headers. [Christian von Roques <roques@mti.ag>]

  *) Enhance rotatelogs so that a UTC offset can be specified, and
     the logfile name can be formatted using strftime(3).  [Ken Coar]

  *) Fix a possible NULL pointer dereference in the detection of the
     default ServerName or IP string (introduced in 1.3.18).
     [Ignasi Roca, <Ignasi.Roca@fujitsu-siemens.com>]

  *) Make EBCDIC conversion fully configurable. Until now, apache relied
     on some (incomplete) heuristics, and would fail to correctly serve
     text files when they had a MIME type of application/anything, like
     application/x-javascript. The new conversion directives allow
     defining the conversion based on MIME type or file suffix.
     [Martin Kraemer]

  *) Add a -V flag to suexec, which causes it to display the
     compile-time settings with which it was built.  (Only